# plogger

./: .gitignore  .pre-commit-config.yaml  README.md  logger.py  main.py  requirements.txt  setup.cfg
.github/workflows/: pre-commit.yml
tests/: logger_test.py  test_logger.py
