[coverage:run]
plugins = covdefaults

[coverage:report]
fail_under = 50

[options]
packages = find:
install_requires =
    sentry-sdk
    python-dotenv

[flake8]
ignore = E501,F401
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
max-complexity = 10

[mypy]
warn_unused_configs = True
exclude = logger/.*\.py

[mypy-testing.*]
disallow_untyped_defs = True

[mypy-tests.*]
disallow_untyped_defs = True
